--- a/PragimCourses/PragimCourses/Views/Courses/FreeCourses.cshtml
+++ b/PragimCourses/PragimCourses/Views/Courses/FreeCourses.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<PragimCourses.Models.CourseCategory>
+﻿@using PagedList.Mvc
+@model PagedList.IPagedList<PragimCourses.Models.CourseCategory>
 
 @{
     ViewBag.Title = "Free Courses";
@@ -6,7 +7,7 @@
 
 <div class="courses__title">
     <div class="container">
-        <h1>Free Online Courses</h1>
+        <h1>Course Category : Free Online Courses</h1>
     </div>
 </div>
 
@@ -33,29 +34,14 @@
 
             </div>
         }
-    
+        @Html.PagedListPager(@Model,page => Url.Action("FreeCourses",new
+        {
+            page
+        }),new PagedListRenderOptions()
+        {
+            DisplayEllipsesWhenNotShowingAllPageNumbers = true    
+        })
+
     </div>
 </div>
-
-
-<div class="signup__news">
-    <div class="container">
-        <div class="col-md-6 col-sm-6 col-xs-12">
-            <div class="right__wrap">
-                <span class="glyphicon glyphicon-envelope"></span>
-                <div class="information">
-                    <h2>Subscribe Email Alerts</h2>
-                    <p>If you wish to receive email alerts when new articles, videos or interview questions are posted on PragimTech.com, you can subscribe by providing your valid email.</p>
-                </div>
-            </div>
-
-        </div>
-        <div class="col-md-6 col-sm-6 col-xs-12">
-            <div class="signup-form">
-                <input placeholder="Your Email Address" type="text" class="form-control" name="name" value="" />
-                <button class="btn btn-warning">Signup <span class="glyphicon glyphicon-arrow-right"></span> </button>
-
-            </div>
-        </div>
-    </div>
-</div>
+@{Html.RenderPartial("_signup_news");}
