--- a/PragimCourses/PragimCourses/Views/Shared/_Layout.cshtml
+++ b/PragimCourses/PragimCourses/Views/Shared/_Layout.cshtml
@@ -68,15 +68,15 @@
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Courses <span class="caret"></span></a>
                                         <ul class="dropdown-menu">
                                             <li>
-                                                @Html.ActionLink("Free Online Courses", "FreeCourses", "Home")
+                                                @Html.ActionLink("Free Online Courses", "FreeCourses", "Courses")
 
                                             </li>
                                             <li>
-                                                @Html.ActionLink("Download Courses", "DownloadCourses", "Home")
+                                                @Html.ActionLink("Download Courses", "DownloadCourses", "Courses")
 
                                             </li>
                                             <li>
-                                                @Html.ActionLink("ClassRoom Courses","ClassRoomCourses","Home")
+                                                @Html.ActionLink("ClassRoom Courses","ClassRoomCourses","Courses")
 
                                             </li>
                                         </ul>
