implement login and register

--- a/PragimCourses/PragimCourses/Views/Account/Register.cshtml
+++ b/PragimCourses/PragimCourses/Views/Account/Register.cshtml
@@ -3,38 +3,83 @@
     ViewBag.Title = "Register";
 }
 
-<h2>@ViewBag.Title.</h2>
 
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Create a new account.</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-        </div>
+<div class="login__title">
+    <div class="container">
+        <h1>New SignUp</h1>
     </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+</div>
+
+<div class="container">
+    <h1 class="login_header">SignUp</h1>
+
+    <div class="row">
+        <div class="col-sm-9 register__form">
+            @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+            {
+                @Html.AntiForgeryToken()
+
+
+
+                <div class="col-sm-6">
+                    <div class="form-group">
+                        @Html.Label("First Name :")
+                        @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.FirstName, "", new { @class = "text-danger" })
+
+                    </div>
+                    <div class="form-group">
+                        @Html.Label("UserName :")
+                        @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" })
+                    </div>
+                    <div class="form-group">
+                        @Html.Label("Password :")
+                        @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="form-group">
+                        @Html.Label("Last Name :")
+
+                        @Html.TextBoxFor(m => m.LastName, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.LastName, "", new { @class = "text-danger" })
+
+                    </div>
+                    <div class="form-group">
+                        @Html.Label("Email :")
+                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                    </div>
+                    <div class="form-group">
+                        @Html.Label("Confirm Password :")
+                        @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+@*                 <div class="form-group"> *@
+@*                      *@
+@*                     <div class="checkbox"> *@
+@*                         <label> *@
+@*                             <input type="checkbox"> Confirm use of weak password *@
+@*                         </label> *@
+@*                     </div> *@
+@*                 </div> *@
+                <p>Already have an Account?
+                    @Html.ActionLink("Login to your account!","Login","Account")
+                </p>
+                <div class="form-group">
+                    <input type="submit" class="btn btn-default" value="Create New Account" />
+                </div>
+            }
+
         </div>
+        <div class="col-sm-3"></div>
     </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register" />
-        </div>
-    </div>
-}
+</div>
+
+@{Html.RenderPartial("_signup_news");}
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
