--- a/PragimCourses/PragimCourses/Content/Site.css
+++ b/PragimCourses/PragimCourses/Content/Site.css
@@ -27,7 +27,16 @@ textarea {
 }
 
 
-
+.navli:first-of-type {
+    border-left: 0.2px solid #ddd;
+    display: inline-block
+}
+    .navli:first-of-type:hover {
+        background: #ddd
+    }
+    .navli {
+    display: inline-block
+}
 /*Pagination*/
 .pagination-container {
     text-align: right;
@@ -45,6 +54,68 @@ textarea {
 }
 
 
+
+/*--------------------------login--------------*/
+.login_header {
+    margin: 60px 15px 40px;
+}
+
+.login, .register__form {
+    margin-left: 20px;
+    background: #EDF1F7;
+    margin-bottom: 50px
+}
+
+.login, .form-group:first-of-type ,
+.register__form, .form-group:first-of-type {
+    padding-top: 20px
+}
+    .login .form-group,
+    .register__form .form-group {
+        margin: 0 20px 10px;
+    }
+    .login label, p,
+    .register__form label, p {
+        color: #657184;
+        font-weight: bold
+    }
+.login a,
+.register__form a{
+    text-decoration: none;
+    color: black
+}
+.login a:hover,
+.register__form a:hover{
+    color: #FF5722;
+}
+    .login input[type="text"], input[type="password"],
+    .register__form input[type="text"], input[type="password"] {
+        background: #E8F0FE;
+    }
+.login input[type="submit"],
+.register__form input[type="submit"]{
+    margin-bottom: 20px;
+    background: #FF5722;
+    color: white;
+    padding: 10px 15px;
+    font-weight: bold
+}
+    .login input[type="submit"]:hover,
+    .register__form input[type="submit"]:hover {
+        background: #0583E4;
+    color: white!important
+}
+
+    .register__form input[type="text"],
+    input[type="password"] {
+        min-width: 100px
+    }
+.register__form p ,.checkbox {
+    margin-left: 33px;
+}
+.register__form input[type="submit"] {
+    float: right
+}
 /**Header*/
 .site__header {
 }
@@ -624,7 +695,8 @@ a.left.carousel-control {
 .testimonial__title,
 .support__title,
 .contact__title,
-.courses__title {
+.courses__title,
+.login__title {
     background: #E4E8EE;
     min-height: 220px
 }
@@ -634,7 +706,8 @@ a.left.carousel-control {
     .testimonial__title h1,
     .support__title h1,
     .contact__title h1,
-    .courses__title {
+    .courses__title h1,
+    .login__title  h1{
         padding: 60px 25px;
         font-family: Arial;
         font-size: 25px;
