--- a/PragimCourses/PragimCourses/Views/Account/Login.cshtml
+++ b/PragimCourses/PragimCourses/Views/Account/Login.cshtml
@@ -4,59 +4,63 @@
     ViewBag.Title = "Log in";
 }
 
-<h2>@ViewBag.Title.</h2>
-<div class="row">
-    <div class="col-md-8">
-        <section id="loginForm">
-            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-            {
-                @Html.AntiForgeryToken()
-                <h4>Use a local account to log in.</h4>
-                <hr />
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
+<div class="login__title">
+    <div class="container">
+        <h1>Student Login</h1>
+    </div>
+</div>
+
+<div class="container">
+
+
+    <div class="row">
+        <div class="col-sm-7">
+            <h1 class="login_header">Login</h1>
+
+            <section class="login" id="loginForm">
+                @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                {
+                    @Html.AntiForgeryToken()
+                    @Html.ValidationSummary(false,"",new{@class="text-danger"});
+                    <div class="form-group">
+                        @Html.Label("UserName Or Email Address")
                         @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
                         @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                     </div>
-                </div>
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
+                    <div class="form-group">
+                        @Html.Label("Password")
                         @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
                         @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                     </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <div class="checkbox">
-                            @Html.CheckBoxFor(m => m.RememberMe)
-                            @Html.LabelFor(m => m.RememberMe)
-                        </div>
+                  
+                    <div class="form-group">
+                        <p>
+                            Don't have an account?
+                            @Html.ActionLink("Create an Account", "Register", "Account")
+                            now!
+                        </p>
+
+                        <p>
+                            @Html.ActionLink("Forgot password?", "ForgotPassword")
+                        </p>
                     </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
+                    <div class="form-group">
                         <input type="submit" value="Log in" class="btn btn-default" />
                     </div>
-                </div>
-                <p>
-                    @Html.ActionLink("Register as a new user", "Register")
-                </p>
-                @* Enable this once you have account confirmation enabled for password reset functionality
-                    <p>
-                        @Html.ActionLink("Forgot your password?", "ForgotPassword")
-                    </p>*@
-            }
-        </section>
-    </div>
-    <div class="col-md-4">
-        <section id="socialLoginForm">
-            @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
-        </section>
+
+                }
+            </section>
+        </div>
+        <div class="col-sm-5">
+            @* <section id="socialLoginForm"> *@
+            @*     @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl }) *@
+            @* </section> *@
+        </div>
     </div>
 </div>
+
+@{Html.RenderPartial("_signup_news");}
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
