--- a/PragimCourses/PragimCourses/Views/Shared/_Layout.cshtml
+++ b/PragimCourses/PragimCourses/Views/Shared/_Layout.cshtml
@@ -24,8 +24,21 @@
                                 Call us +01022169733 / 01013658438 &nbsp;|&nbsp;
                                 <i class="glyphicon glyphicon-calendar"></i> +01022169733
                             </li>
-                            <li><a href="#">Signup</a></li>
-                            <li><a href="#">Login</a></li>
+                            @if (!User.Identity.IsAuthenticated)
+                            {
+                                <li>
+                                    @Html.ActionLink("Signup","Register","Account")
+
+                                </li>
+                                <li>
+                                    @Html.ActionLink("Login","login","Account")
+                                </li>
+                            }
+                            else
+                            {
+                                @Html.Partial("_LoginPartial");
+                            }
+
                         </ul>
                     </nav>
                 </div>
