--- a/PragimCourses/PragimCourses/Views/Shared/_LoginPartial.cshtml
+++ b/PragimCourses/PragimCourses/Views/Shared/_LoginPartial.cshtml
@@ -4,19 +4,20 @@
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
     {
     @Html.AntiForgeryToken()
-
-    <ul class="nav navbar-nav navbar-right">
-        <li>
-            @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+       
+        <li class="navli">
+            @Html.ActionLink( User.Identity.GetUserName(), "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
         </li>
-        <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
-    </ul>
+        <li class="navli"><a href="javascript:document.getElementById('logoutForm').submit()">Logoff</a></li>
     }
 }
 else
 {
-    <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
-        <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
-    </ul>
+    <li class="navli">
+        @Html.ActionLink("Signup","Register","Account")
+
+    </li>
+    <li class="navli">
+        @Html.ActionLink("Login","login","Account")
+    </li>
 }
