--- a/PragimCourses/PragimCourses/Views/Home/Feedback.cshtml
+++ b/PragimCourses/PragimCourses/Views/Home/Feedback.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model PragimCourses.ViewModels.FeedbackViewModel
+@{
     ViewBag.Title = "Feedback";
 }
 
@@ -14,64 +15,63 @@
             <h1>Feedback</h1>
             <div class="feedback__form">
                 <h2>Please provide your honest feedback about your experience with Pragim.</h2>
-                <select class="form-control">
-                    <option value="-1">Select tecnology</option>
-                    <option value="value">C#</option>
-                    <option value="value">Mvc</option>
-                    <option value="value">Sql</option>
-                    <option value="value">Oracle</option>
-                    <option value="value">Api</option>
-                </select>
-                <input class="form-control" placeholder="Trainer Name" type="text" name="name" value="" />
-                <input class="form-control" placeholder="Trainer Email" type="text" name="name" value="" />
-                <input class="form-control" placeholder="Trainee Name" type="text" name="name" value="" />
 
-                <select class="form-control">
-                    <option value="-1">Select Trainer Punctuality</option>
-                    <option value="value">Always In Time</option>
-                    <option value="value">Rarely Late</option>
-                    <option value="value">Rarely On Time</option>
-                    <option value="value">Never On Time</option>
-                </select>
-                <select class="form-control">
-                    <option value="-1">Trainer Technical Strength</option>
-                    <option value="value">Excelent</option>
-                    <option value="value">Very Good</option>
-                    <option value="value">Good</option>
-                    <option value="value">Average</option>
-                    <option value="value">Below Average</option>
-                    <option value="value">Bad</option>
-                </select>
-                <textarea class="form-control" placeholder="Comments" rows="5"></textarea>
-
-                <h3>Note: If you wish to remain anonymous, please donot provide your name and/or email</h3>
-                <button class="btn btn-default">Send <span class="glyphicon glyphicon-arrow-right"></span></button>
-            </div>
-        </div>
-    </div>
-</div>
+                @using (Html.BeginForm("Feedback", "Home", FormMethod.Post))
+                {
+                    @Html.AntiForgeryToken();
+                    @Html.ValidationSummary(false, "", new { @class = "text-danger" })
+                    
+                    @Html.DropDownList("Technology",new List<SelectListItem>()
+                    {
+                       new SelectListItem(){Text = "DotNet Developer",Value = "DotNet Developer"},
+                       new SelectListItem(){Text = "Php Developer",Value = "Php Developer"},
+                       new SelectListItem(){Text = "Oracle Developer",Value = "Oracle Developer"},
+                       new SelectListItem(){Text = "Database Administrator",Value = "Database Administrator"},
+                       new SelectListItem(){Text = "SharePoint Developer",Value = "SharePoint Developer"}
+                    },"Select Technology",new{@class="form-control"})
+                    
+                   
+                    @Html.TextBoxFor(m=>m.TrainerName,new{@class="form-control", placeholder = "Trainer Name" })
+                    @Html.TextBoxFor(m=>m.TrainerEmail,new{@class= "form-control",placeholder="Trainer Email" })
+                    @Html.TextBoxFor(m=>m.TrainerName,new{@class="form-control", placeholder = "Trainee Name" })
 
 
-<div class="signup__news">
-    <div class="container">
-        <div class="col-md-6 col-sm-6 col-xs-12">
-            <div class="right__wrap">
-                <span class="glyphicon glyphicon-envelope"></span>
-                <div class="information">
-                    <h2>Subscribe Email Alerts</h2>
-                    <p>If you wish to receive email alerts when new articles, videos or interview questions are posted on PragimTech.com, you can subscribe by providing your valid email.</p>
-                </div>
-            </div>
+                    @Html.DropDownList("Punctuality", new List<SelectListItem>()
+                    {
+                        new SelectListItem(){Text = "Always In Time",Value = "Always In Time"},
+                        new SelectListItem(){Text = "Rarely Late",Value = "Rarely Late"},
+                        new SelectListItem(){Text = "Rarely On Time",Value = "Rarely On Time"},
+                        new SelectListItem(){Text = "Never On Time",Value = "Never On Time"}
+                    }, "Select Trainer Punctuality", new{@class="form-control"})
+                    
+                    @Html.DropDownList("TechnologyStrength", new List<SelectListItem>()
+                    {
+                        new SelectListItem(){Text = "Excelent",Value = "Excelent"},
+                        new SelectListItem(){Text = "Very Good",Value = "Very Good"},
+                        new SelectListItem(){Text = "Good",Value = "Good"},
+                        new SelectListItem(){Text = "Average",Value = "Average"},
+                        new SelectListItem(){Text = "Bellow Average",Value = "Bellow Average"},
+                        new SelectListItem(){Text = "Bad",Value = "Bad"}
+                    }, "Trainer Technical Strength", new{@class="form-control"})
+                    
+                    @Html.TextAreaFor(m=>m.Comment,new{@class="form-control", placeholder = "Comments",rows = "5" })
 
-        </div>
-        <div class="col-md-6 col-sm-6 col-xs-12">
-            <div class="signup-form">
-                <input placeholder="Your Email Address" type="text" class="form-control" name="name" value="" />
-                <button class="btn btn-default">Signup <span class="glyphicon glyphicon-arrow-right"></span> </button>
+                    <h3>Note: If you wish to remain anonymous, please donot provide your name and/or email</h3>
+                    <button class="btn btn-default">Send <span class="glyphicon glyphicon-arrow-right"></span></button>
+
+
+                }
+
 
             </div>
         </div>
     </div>
 </div>
 
+@Html.Partial("_signup_news")
+
+@section scripts
+{
+    @Scripts.Render("~/bundles/jqueryval")
+}
 
