--- a/PragimCourses/PragimCourses/Views/Account/ForgotPassword.cshtml
+++ b/PragimCourses/PragimCourses/Views/Account/ForgotPassword.cshtml
@@ -2,27 +2,35 @@
 @{
     ViewBag.Title = "Forgot your password?";
 }
-
-<h2>@ViewBag.Title.</h2>
-
-@using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Enter your email.</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-        </div>
+<div class="login__title">
+    <div class="container">
+        <h1>Forget Password</h1>
     </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Email Link" />
-        </div>
-    </div>
-}
+</div>
+        @using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post))
+        {
+
+            <div class="row">
+                <div class="col-xs-offset-2 col-xs-10">
+                    @Html.AntiForgeryToken()
+    
+                    @Html.ValidationSummary("", new { @class = "text-danger" })
+    
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.Email, new { @class = "control-label" })
+                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" class="btn btn-default" value="Email Link" />
+                    </div>
+
+                </div>
+            </div>
+           
+            
+        }
+
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
