--- a/PragimCourses/PragimCourses/Views/Account/Register.cshtml
+++ b/PragimCourses/PragimCourses/Views/Account/Register.cshtml
@@ -19,7 +19,7 @@
             {
                 @Html.AntiForgeryToken()
 
-
+                @Html.ValidationSummary(false,null,new{@class="text-danger"})
 
                 <div class="col-sm-6">
                     <div class="form-group">
@@ -58,15 +58,14 @@
                         @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger" })
                     </div>
                 </div>
-@*                 <div class="form-group"> *@
-@*                      *@
-@*                     <div class="checkbox"> *@
-@*                         <label> *@
-@*                             <input type="checkbox"> Confirm use of weak password *@
-@*                         </label> *@
-@*                     </div> *@
-@*                 </div> *@
-                <p>Already have an Account?
+                 <div class="col-xs-12 form-group">
+                     <div class="checkbox" style="margin-left: 0">
+                         <label>
+                             @Html.CheckBoxFor(u=>u.CheckWeekPassword) Confirm use of weak password
+                         </label>
+                     </div>
+                 </div>
+                <p class="col-xs-12">Already have an Account?
                     @Html.ActionLink("Login to your account!","Login","Account")
                 </p>
                 <div class="form-group">
