--- a/PragimCourses/PragimCourses/Content/Site.css
+++ b/PragimCourses/PragimCourses/Content/Site.css
@@ -31,10 +31,12 @@ textarea {
     border-left: 0.2px solid #ddd;
     display: inline-block
 }
+
     .navli:first-of-type:hover {
         background: #ddd
     }
-    .navli {
+
+.navli {
     display: inline-block
 }
 /*Pagination*/
@@ -66,56 +68,65 @@ textarea {
     margin-bottom: 50px
 }
 
-.login, .form-group:first-of-type ,
+.login, .form-group:first-of-type,
 .register__form, .form-group:first-of-type {
     padding-top: 20px
 }
+
     .login .form-group,
     .register__form .form-group {
         margin: 0 20px 10px;
     }
+
     .login label, p,
     .register__form label, p {
         color: #657184;
         font-weight: bold
     }
-.login a,
-.register__form a{
-    text-decoration: none;
-    color: black
-}
-.login a:hover,
-.register__form a:hover{
-    color: #FF5722;
-}
+
+    .login a,
+    .register__form a {
+        text-decoration: none;
+        color: black
+    }
+
+        .login a:hover,
+        .register__form a:hover {
+            color: #FF5722;
+        }
+
     .login input[type="text"], input[type="password"],
     .register__form input[type="text"], input[type="password"] {
         background: #E8F0FE;
     }
-.login input[type="submit"],
-.register__form input[type="submit"]{
-    margin-bottom: 20px;
-    background: #FF5722;
-    color: white;
-    padding: 10px 15px;
-    font-weight: bold
-}
-    .login input[type="submit"]:hover,
-    .register__form input[type="submit"]:hover {
-        background: #0583E4;
-    color: white!important
-}
+
+    .login input[type="submit"],
+    .register__form input[type="submit"] {
+        margin-bottom: 20px;
+        background: #FF5722;
+        color: white;
+        padding: 10px 15px;
+        font-weight: bold
+    }
+
+        .login input[type="submit"]:hover,
+        .register__form input[type="submit"]:hover {
+            background: #0583E4;
+            color: white !important
+        }
 
     .register__form input[type="text"],
     input[type="password"] {
         min-width: 100px
     }
-.register__form p ,.checkbox {
-    margin-left: 33px;
-}
-.register__form input[type="submit"] {
-    float: right
-}
+
+    .register__form p, .checkbox {
+        margin-left: 33px;
+    }
+
+    .register__form input[type="submit"] {
+        float: right
+    }
 /**Header*/
 .site__header {
 }
@@ -266,7 +277,7 @@ a.left.carousel-control {
         font-family: Arial;
         font-size: 17px;
         width: 500px;
-        color:white
+        color: white
     }
 
     .carousel-caption button {
@@ -459,10 +470,10 @@ a.left.carousel-control {
     }
 
 .course__wrap {
-    box-shadow: 2px 2px 2px #ddd , -2px -2px 2px #ddd;
+    box-shadow: 2px 2px 2px #ddd, -2px -2px 2px #ddd;
     min-height: 450px;
     margin-bottom: 25px;
-    overflow: hidden; 
+    overflow: hidden;
     perspective: 400px;
 }
 
@@ -655,8 +666,7 @@ a.left.carousel-control {
 .course__content {
     display: inline-block;
     vertical-align: top;
-    margin-left :10px
-
+    margin-left: 10px
 }
 
     .course__content h4 {
@@ -711,7 +721,7 @@ a.left.carousel-control {
     .support__title h1,
     .contact__title h1,
     .courses__title h1,
-    .login__title  h1{
+    .login__title h1 {
         padding: 60px 25px;
         font-family: Arial;
         font-size: 25px;
@@ -1052,10 +1062,10 @@ a.left.carousel-control {
         min-height: 205px;
         max-height: 205px;
     }
-    
-.img__course img:hover {
-    filter: brightness(0.5)
-}
+
+        .img__course img:hover {
+            filter: brightness(0.5)
+        }
 
 .course__details {
     margin-left: 20px;
@@ -1088,3 +1098,151 @@ a.left.carousel-control {
         }
 
 /*----------------------end---------------*/
+
+/*--------------------------Wrapper --------------------*/
+.wrapper {
+    background: #F7F8FB;
+}
+
+    .wrapper .course__Description, .course__image, .course__information {
+        background: white;
+        min-height: 85px;
+        margin-bottom: 15px
+    }
+
+        .wrapper .course__Description h1 {
+            font-size: 27px;
+            padding: 27px
+        }
+
+.icons {
+    padding: 15px 3px;
+    display: flex;
+    min-height: 90px
+}
+
+    .icons .social__icon {
+        margin-left: 10px;
+        background: blue;
+        width: 30px;
+        height: 30px;
+    }
+
+        .icons .social__icon span {
+            margin: 7px;
+            color: white
+        }
+
+.course__information .price {
+    margin-bottom: 17px;
+}
+
+    .course__information .price span {
+        color: #aba5a5;
+        font-size: 20px
+    }
+
+    .course__information .price > span > span {
+        font-size: 25px;
+        color: #2abd2a
+    }
+
+.course__information .details {
+}
+
+    .course__information .details .left {
+        display: inline-block;
+        float: left
+    }
+
+    .course__information .details .right {
+        display: inline-block;
+        float: right
+    }
+
+        .course__information .details .right span:first-of-type {
+            font-size: 30px;
+            color: #ddd;
+            display: inline-block;
+            float: left;
+        }
+
+        .course__information .details .right span:nth-of-type(2) {
+            color: #aba5a5;
+            font-size: 13px;
+            margin-top: 10px;
+            display: inline-block;
+            float: right;
+            font-weight: 700;
+        }
+
+    .course__information .details .left .star__content {
+        margin-top: 20px
+    }
+
+.course__information .details .left button {
+    background: #FF5722;
+    font-size: 19px;
+    padding: 10px 22px;
+    display: block;
+    color: white;
+}
+
+    .course__information .details .left button span{
+        font-size: 16px;
+        color: white;
+    }
+
+    .course__information .details .left button:hover {
+        background: #0583E4
+
+    }
+
+.related__courses {
+    background: white;
+    padding: 20px;
+    margin-bottom: 30px
+}
+.related__courses h3 {
+    margin-bottom: 25px
+}
+.related__courses ul {
+list-style: none
+}
+
+span.fSpan, span.sSpan {
+    font-size: 17px;
+    font-weight: 500;
+}
+span.sSpan {
+    color: #FF5722;
+}
+
+@media (max-width :500px) {
+    span.sSpan,span.fSpan {
+        display: block
+    }
+    .course__information .details .right {
+        clear: both;
+        display: block;
+        float: left;
+    }
+}
+/*----------------------end -----------------------------*/
+
+ul.course-detail {
+    list-style: none
+}
+ul.course-detail>li {
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 5px;
+}
+    ul.course-detail > li >ol {
+        font-size: 15px;
+        font-weight: normal
+    }
+
+    ul.course-detail > li > ol>li {
+        margin-bottom: 5px
+    }
