--- a/PragimCourses/PragimCourses/Content/Site.css
+++ b/PragimCourses/PragimCourses/Content/Site.css
@@ -6,15 +6,10 @@ body {
     padding-bottom: 20px;
 }
 
-/* Set padding to keep content from hitting the edges */
-/* .body-content { */
-/*     padding-left: 15px; */
-/*     padding-right: 15px; */
-/* } */
-
-/* Override the default bootstrap behavior where horizontal description lists 
-   will truncate terms that are too long to fit in the left column 
-*/
+a:hover, a h3:hover, a h4:hover ,a p:hover {
+    color: #FF5722;
+    text-decoration: none
+}
 .dl-horizontal dt {
     white-space: normal;
 }
@@ -1104,7 +1099,7 @@ a.left.carousel-control {
     background: #F7F8FB;
 }
 
-    .wrapper .course__Description, .course__image, .course__information {
+    .wrapper .course__Description, .course__image /*, .course__information*/ {
         background: white;
         min-height: 85px;
         margin-bottom: 15px
@@ -1123,10 +1118,14 @@ a.left.carousel-control {
 
     .icons .social__icon {
         margin-left: 10px;
-        background: blue;
+        background: #1dc4de;
         width: 30px;
         height: 30px;
     }
+
+        .icons .social__icon:hover {
+            background: black
+        }
 
         .icons .social__icon span {
             margin: 7px;
@@ -1150,78 +1149,77 @@ a.left.carousel-control {
 .course__information .details {
 }
 
-    .course__information .details .left {
-        display: inline-block;
-        float: left
-    }
-
     .course__information .details .right {
-        display: inline-block;
-        float: right
-    }
-
-        .course__information .details .right span:first-of-type {
-            font-size: 30px;
-            color: #ddd;
-            display: inline-block;
-            float: left;
-        }
-
-        .course__information .details .right span:nth-of-type(2) {
-            color: #aba5a5;
-            font-size: 13px;
-            margin-top: 10px;
-            display: inline-block;
-            float: right;
-            font-weight: 700;
-        }
-
-    .course__information .details .left .star__content {
         margin-top: 20px
     }
 
-.course__information .details .left button {
-    background: #FF5722;
-    font-size: 19px;
-    padding: 10px 22px;
-    display: block;
-    color: white;
-}
+    .course__information .details .left .heart {
+        font-size: 30px;
+        background: #BBC1CD;
+        width: 70px;
+        height: 45px;
+        display: inline-block;
+        float: right;
+        border-radius: 5px;
+    }
 
-    .course__information .details .left button span{
-        font-size: 16px;
+    .course__information .details .left span {
+        font-size: 30px;
+        color: white;
+        text-align: center;
+        margin: 7px 18px;
+    }
+
+    .course__information .details .right .enrollment {
+        color: #BBC1CD;
+        float: right
+    }
+
+    .course__information .details .left button {
+        background: #FF5722;
+        font-size: 19px;
+        padding: 10px 22px;
+        display: inline-block;
         color: white;
     }
 
-    .course__information .details .left button:hover {
-        background: #0583E4
+        .course__information .details .left button span {
+            font-size: 16px;
+            color: white;
+        }
 
-    }
+        .course__information .details .left button:hover {
+            background: #0583E4
+        }
 
 .related__courses {
     background: white;
     padding: 20px;
     margin-bottom: 30px
 }
-.related__courses h3 {
-    margin-bottom: 25px
-}
-.related__courses ul {
-list-style: none
-}
+
+    .related__courses h3 {
+        margin-bottom: 25px
+    }
+
+    .related__courses ul {
+        list-style: none
+    }
 
 span.fSpan, span.sSpan {
     font-size: 17px;
     font-weight: 500;
 }
+
 span.sSpan {
     color: #FF5722;
 }
 
 @media (max-width :500px) {
-    span.sSpan,span.fSpan {
+    span.sSpan, span.fSpan {
         display: block
     }
+
     .course__information .details .right {
         clear: both;
         display: block;
@@ -1233,16 +1231,157 @@ span.sSpan {
 ul.course-detail {
     list-style: none
 }
-ul.course-detail>li {
-    font-size: 20px;
-    font-weight: 600;
-    margin-bottom: 5px;
-}
-    ul.course-detail > li >ol {
-        font-size: 15px;
-        font-weight: normal
+
+    ul.course-detail > li {
+        font-size: 20px;
+        font-weight: 600;
+        margin-bottom: 5px;
     }
 
-    ul.course-detail > li > ol>li {
-        margin-bottom: 5px
+        ul.course-detail > li > ol {
+            font-size: 15px;
+            font-weight: normal
+        }
+
+            ul.course-detail > li > ol > li {
+                margin-bottom: 5px
+            }
+
+
+/*-----------------------Review -----------------------------*/
+.review, .form__review {
+    margin-left: 15px
+}
+
+    .review span {
+        color: #a2a0a0;
+    }
+
+    .review .span-header {
+        font-size: 14px;
+        display: block;
+        margin-bottom: 8px;
+    }
+
+    .review .span-number {
+        color: #FF5722;
+        display: block;
+        font-size: 22px;
+        font-weight: 500;
+        padding-left: 5px
+    }
+
+.p-rating span {
+    color: orange
+}
+
+.review__details, .review__details p {
+    color: #a2a0a0;
+}
+
+    .review__details p > span {
+        width: 110px;
+        height: 10px;
+        background: #ddd;
+        display: inline-block;
+    }
+
+    .review__details .inner-span {
+        display: inline-block;
+        height: 10px;
+        position: absolute;
+        background: #FF5722;
+    }
+
+.panel-body h3 {
+    font-weight: 700;
+    padding-bottom: 10px;
+    background: url('../../PragimCourses/Content/Images/border_bottom.png') no-repeat left bottom
+}
+
+.form__review button {
+    background: #FF5722;
+    font-size: 19px;
+    padding: 10px 22px;
+    display: block;
+    color: white;
+}
+
+    .form__review button:hover {
+        background: #0583E4;
+        color: white
+    }
+
+/**-------------------------------------------------------------*/
+
+.similar__course .img-course {
+    width: 85px;
+    height: 65px;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.similar__course .course__content {
+    display: inline-block;
+    vertical-align: top;
+    margin-left: 15px;
+    width: 50%;
+}
+
+.similar__course ul li {
+    background: inherit
+}
+
+@media(max-width:767px) {
+    .similar__course .img-course {
+        width: 120px;
+        height: 90px;
+    }
+
+    .similar__course .course__content {
+        margin-left: 26px;
+    }
+
+        .similar__course .course__content h4 {
+            font-size: 20px;
+        }
+
+        .similar__course .course__content p {
+            margin-top: 15px;
+        }
+}
+
+/*-----------------------------------people-review------------------------------*/
+.people-review {
+    background: #ccc;
+    overflow: hidden;
+    margin-bottom: 10px
+}
+
+    .people-review .left-div {
+        margin-left: 10px;
+        display: inline-block;
+        float: left;
+        width: 80px;
+        height: 80px;
+        background: #ddd;
+        border-radius: 50%
+    }
+
+    .people-review .middle-div {
+        display: inline-block;
+        margin: 25px 15px 0;
+        font-size: 21px
+    }
+
+        .people-review .middle-div p {
+            color: blue;
+            text-transform: capitalize;
+            letter-spacing: 1px
+        }
+
+    .people-review .right-div {
+        padding: 30px 10px;
+        display: inline-block;
+        float: right
     }
